# rpckit

./: README.txt  pyproject.toml  setup.cfg  setup.py
rpckit/: rpc.py  version.py  xdrlib.py
scripts/: rpcgen.py
