[metadata]
name = rpckit
description = A Python module for making SunRPC compatible calls
long_description = file: README.txt
long_description_content_type = text/plain
author = Software Division, Subaru Telescope, NAOJ
author_email = ocs@naoj.org
license = GPLv2
license_files = LICENSE.txt
url = https://github.com/naojsoft/rpckit
edit_on_github = False
github_project = naojsoft/rpckit
keywords = remote, procedure, call, sunrpc
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
 
[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
include_package_data = False
scripts =
    scripts/rpcgen.py

